--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background: #5c00cc;
+    background: #16022e;
     color: white;
     text-align: center;
     padding: 20px;
